012 ==> 199617 : When clicking on "My Tags", the view switches automatically after 2 seconds.
013 ==> 199076 : Sudden crash of digiKam during work.
014 ==> 195121 : digiKam crashes on view image (exiv2).
015 ==> 142566 : Update metadata doesn't work correctly for creation date.
016 ==> 199251 : digiKam crashes when setting exif orientation tag.
017 ==> 


*********************************************************************************************************
digiKam 1.0.0-beta2 - Release date: 2009-07-05

NEW FEATURES:

General        : Added support of Metadata Template to set easily image copyright.
General        : Added support of LightRoom keywords path for interoperability purpose.
General        : digiKam use a new database to cache thumbnails instead ~./thumbnails.
                 File format used to store image is PGF (http://www.libpgf.org).
                 PGF is a wavelets based image compression format and give space optimizations.
General        : Added Multi-languages support to Caption and Tags right side-bar.
AlbumGui       : Find Duplicates search can be limited to an album and tag range.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 178189 : Do not create preview automatically for large pictures.
002 ==> 172807 : Warning: JPEG format error, rc = 5.
003 ==> 188936 : Not finding all pictures on camera.
004 ==> 195812 : Crash when rotating image in album overlay (rightest rotate icon).
005 ==> 094562 : Renaming an album recreates all thumbnails.
006 ==> 193124 : Import image should allow both direct and reverse ordering.
007 ==> 188051 : Sort order of filenames in camera - no way to set or choose.
008 ==> 183435 : No more file manager at media:/camera.
009 ==> 189979 : All displays of the same caption don't show the same text when it contains "éèà".
010 ==> 195902 : digiKam crashes on first startup if album folder is not empty.